k8s/31-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: taskflow
  labels:
    app: frontend
    app.kubernetes.io/part-of: taskflow
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
