k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow
  namespace: taskflow
  labels:
    app.kubernetes.io/part-of: taskflow
spec:
  ingressClassName: nginx
  rules:
    - host: taskflow.local
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
